# ecommerce-image-validator

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  technical_writeup.md
scripts/: compare_models.py  evaluate.py
src/ecommerce_image_validator/: __init__.py  config.py  logger.py  pipeline.py  utils.py
src/ecommerce_image_validator/extractors/: __init__.py  background_analyzer.py  base.py  blur_detector.py  object_detector.py
src/ecommerce_image_validator/llm/: __init__.py  base.py  claude_reasoner.py  gemini_reasoner.py  groq_reasoner.py  prompts.py
